@@ -2,6 +2,10 @@
 
  - Fix for bug 30051: Added missing build step for de_CH l10n package to install the PO file during package build.
 
+* 2013-11-28 - thorben.betten@open-xchange.com
+
+ - Fix for bug 30065: Changed misleading wording on no-op login request
+
 * 2013-11-27 - jan.bauerdick@open-xchange.com
 
  - Fix for bug 29982: Correct handling of URLs as database hostnames
